<resources>
    <string name="app_name">AcmeTest</string>

    <string name="required_error">This field is required</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="welcome">Welcome !</string>
    <string name="login_failed">Invalid credentials</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard_fragment_label">Dashboard</string>
    <string name="ticket_fragment_label">New Ticket</string>
    <string name="ticket_update_fragment_label">Update Ticket</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_ticket">new ticket</string>
    <string name="go_to_work_ticket">Go to work ticket</string>
    <string name="go_to_get_directions">Go to get directions</string>
    <string name="calendar">Calendar</string>
    <string name="view_ticket">View Ticket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_ticket_name">Ticket name</string>
    <string name="enter_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="no_tickets">No Tickets</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="work_ticket_fragment_label">Work Ticket</string>
    <string name="get_directions_label">Get Directions</string>
    <string name="most_recent_ticket">Most recent ticket</string>
    <string name="customer_info">Customer Info</string>
    <string name="enter_note">Enter note</string>
    <string name="notes">Notes</string>
    <string name="get_direction">Get Direction</string>
    <string name="reason_for_call">Reason for call</string>
    <string name="finishing_up">Finishing Up</string>
    <string name="purchasing">Purchasing</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="picture_icon">Picture icon</string>
    <string name="acme">ACME</string>
    <string name="address">Address:</string>
    <string name="dialog_delete_ticket_message">Do you want to delete this Ticket?</string>
    <string name="yes_i_do">Yes, I do</string>
    <string name="no">No</string>
    <string name="prompt_customer_phone">### ### ####</string>
    <string name="prompt_customer_fullname">Customer fullname</string>
    <string name="enter_notes">Enter notes</string>
    <string name="scheduled_for_label">Scheduled For</string>
    <string name="customer_phone_label">Phone:</string>
    <string name="customer_name_label">Name:</string>
    <string name="customer_name">Max</string>
    <string name="customer_address">Grenville, Grenada</string>
    <string name="scheduled_for">01/01/2021</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_maps2">Map</string>
    <string name="enter_reasons_for_call">Enter reasons for call</string>
</resources>