<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/workTicketContainer"
    tools:context=".ui.workticket.WorkTicketFragment">

    <TextView
        android:id="@+id/ticketNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/most_recent_ticket"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticketName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:paddingStart="16dp"
        tools:text="Ticket 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketNameLabel"/>

    <TextView
        android:id="@+id/customerInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/customer_info"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketName" />

    <TextView
        android:id="@+id/customerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/name_nmax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerInfoLabel" />

    <TextView
        android:id="@+id/customerPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/phone_n_55_555555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerNameLabel" />

    <TextView
        android:id="@+id/customerAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerPhoneLabel" />

    <TextView
        android:id="@+id/customerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grenville_grenada"
        app:layout_constraintStart_toStartOf="@+id/customerAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/customerAddressLabel" />

    <TextView
        android:id="@+id/scheduled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scheduled for: 27/05/2021"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/customerInfoLabel" />

    <TextView
        android:id="@+id/noteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notes"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerAddress" />

    <TextView
        android:id="@+id/reasonForCallLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/reason_for_call"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bGetDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/get_direction"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/customerAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerAddressLabel" />

    <EditText
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="50"
        android:padding="8dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textCursorDrawable="@drawable/edittext_cursor_color"
        android:fontFamily="@font/poppins_light"
        android:background="@drawable/input_rounded_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteLabel" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/overview" />

        <RadioButton
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/details" />

        <RadioButton
            android:id="@+id/purchasing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:text="@string/purchasing" />

        <RadioButton
            android:id="@+id/finishingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:text="@string/finishing_up" />

        <ImageView
            android:id="@+id/pictureLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/picture_icon"
            android:src="@drawable/ic_picture"
            android:padding="10dp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>

