<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/overview" />

        <RadioButton
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/details" />

        <RadioButton
            android:id="@+id/purchasing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:text="@string/purchasing" />

        <RadioButton
            android:id="@+id/finishingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/toggle_button_selector"
            android:button="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:padding="10dp"
            android:text="@string/finishing_up" />

        <ImageView
            android:id="@+id/pictureLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/picture_icon"
            android:src="@drawable/ic_picture"
            android:padding="10dp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>