<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="ticket"
            type="com.project.acmetest.data.model.TicketObject" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newTicketContainer"
        android:padding="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName|textCapWords"
                    android:background="@drawable/input_rounded_white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/prompt_ticket_name"
                    android:text="@={ticket.ticketName}"
                    android:maxLength="20"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/customerFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:inputType="textPersonName|textCapWords"
                    android:background="@drawable/input_rounded_white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/prompt_customer_fullname"
                    android:text="@={ticket.customerFullname}"
                    android:maxLength="30"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/customerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:digits="0123456789"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:inputType="phone|number"
                    android:background="@drawable/input_rounded_white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/prompt_customer_phone"
                    android:text="@={ticket.customerPhone}"
                    android:maxLength="10"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@drawable/input_rounded_white"
                    android:ems="10"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="start|top"
                    android:hint="@string/enter_address"
                    android:text="@={ticket.address}"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textCursorDrawable="@drawable/edittext_cursor_color" />

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@drawable/input_rounded_white"
                    android:ems="10"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="start|top"
                    android:hint="@string/enter_notes"
                    android:text="@={ticket.notes}"
                    android:inputType="textMultiLine"
                    android:maxLength="250"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textCursorDrawable="@drawable/edittext_cursor_color" />

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxDate="01/01/2050"
                    android:layout_marginTop="4dp" />

                <Button
                    android:id="@+id/bSave"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:enabled="@{ticket.allFilled ? true : false}"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>